<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item  android:id="@+id/herramientas"
        android:title="@string/herramientas"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_manage">

        <menu>
            <item
                android:id="@+id/cliente"
                android:title="@string/cliente"
                android:orderInCategory="100"
                app:showAsAction="never"/>

            <item
                android:id="@+id/producto"
                android:title="@string/producto"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item
                android:id="@+id/vendodor"
                android:title="@string/vendedor"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item
                android:id="@+id/categoria"
                android:title="@string/categoria"
                android:orderInCategory="100"
                app:showAsAction="never"/>

        </menu>


       </item>

    <item android:id="@+id/reportes"
        android:title="@string/reportes"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_agenda">
        <menu>

            <item
                android:id="@+id/repProducto"
                android:title="@string/repVenta"
                android:orderInCategory="100"
                app:showAsAction="never"/>
            <item
                android:id="@+id/repVenta"
                android:title="@string/repVenta"
                android:orderInCategory="100"
                app:showAsAction="never"/>

        </menu>

    </item>

</menu>
